# SQLite_Database

./: CMakeLists.txt  README.md
include/: constants.h  execute.h  lexer.h  parser.h  sql_command.h
src/: execute.c  lexer.c  main.c  parser.c
tests/: CMakeLists.txt
